# billiards-billing-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py
.github/workflows/: python-app.yml
docs/: CASE_STUDY_JA.md  sanitized_monthly_summary.csv
src/billiards_manager/: __init__.py  app.py  database.py
tests/: smoke_test.py
